--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@supabase/supabase-js": "^2.38.0",
     "@vercel/analytics": "^1.1.0",
     "@vueuse/core": "^10.5.0",
+    "element-plus": "^2.4.0",
     "pinia": "^2.1.6",
+    "randomcolor": "^0.6.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-custom-scrollbar": "^1.4.4",
+    "vue-router": "^4.2.5",
+    "vue3-perfect-scrollbar": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
